2016-09-08  Dirk Eddelbuettel  <edd@debian.org>

	* src/anytime.cpp (charToPOSIXct): Defensive assignment for string

2016-09-07  Dirk Eddelbuettel  <edd@debian.org>

	* src/anytime.cpp: Updated and expanded help texts
	* man/cToPOSIXct.Rd: Ditto
	* man/charToPOSIXct.Rd: Ditto

	* tests/simpleTests.R: Some first (and simple) tests

2016-09-06  Dirk Eddelbuettel  <edd@debian.org>

	* R/anytime.R: Front-end R function testing for Date or POSIXt
	before dispatching to C++-based converter

	* DESCRIPTION (Package): First commit, using a set of files which
	originated with the RcppBDT package
